    - Fixed a bug in openLabJack where some error conditions on Windows would
      try to raise LabjackException (undefined) instead of LabJackException.
    - Added string descriptions for low-level error codes 112 to 116.
    - Fixed a bug in U6 where I2C responses with an odd number of bytes would
      return an extra byte at the end.
    - Fixed a bug in UE9 streamData where an incorrect variable name was being
      used.
    - Fixed a Windows bug in eGetRaw when the x1 parameter has a 64-bit pointer
      address. The function now uses 32 and 64-bit safe eGetPtr UD function.
    - Fixed the returned DAC values of the readDefaultsConfig method to little
      endian.
    - Fixed many Pyflakes warnings such as unused variables and unused imports.
    - Removed use of "import *" from most modules.
- Next Release
    - Moved the ctypes import after socket to prevent an "Aborted (core dump)"
      exit error on Cygwin.
    - _makeDeviceFromHandle function now gets/sets the U3's bootloaderVersion.
    - Fixed the reset method for LabJackPython module's Device class.
    - Updated the reset method of the Device class to perform a hard and soft
      reset on Linux and Mac OS X like the Windows UD function ResetLabJack.
    - The spi() method of U3, U6, and UE9 has changed.  The keyword argument
      "CSPINNum" has been renamed to "CSPinNum" to be consistent with the other
      keyword arguments.  The old "CSPINNum" will still work but is deprecated
      and will be removed in a future version.
    - Removed the u3SampleAndLogToCloudDot.py example.  The CloudDot service
      this example uses is no longer available.
    - Updated the U6 streamConfig docstring.
    - Fixed a bug in the U6 processStreamData method where high-resolution
      calibration constants were being used on a U6-Pro by mistake when
      calculating the voltage value.
    - Replaced print statements with print function calls in the modules for
      Python 3 compatibility.